feat: create Welcome page

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "plant-manager",
+    "name": "PlantManager",
     "slug": "plant-manager",
     "version": "1.0.0",
     "orientation": "portrait",
