--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@expo-google-fonts/inter": "^0.1.0",
     "@expo-google-fonts/jost": "^0.1.0",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
     "expo": "~41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
@@ -18,6 +21,10 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.1.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.3"
   },
@@ -29,6 +36,7 @@
     "@types/react-native": "~0.63.2",
     "@types/styled-components-react-native": "^5.1.1",
     "commitizen": "^4.2.3",
+    "commitlint-config-gitmoji": "^2.2.3",
     "cz-conventional-changelog": "3.3.0",
     "husky": "^6.0.0",
     "typescript": "~4.0.0"
