--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@expo-google-fonts/inter": "^0.1.0",
     "@expo-google-fonts/jost": "^0.1.0",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
+    "date-fns": "^2.21.1",
     "expo": "~41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
@@ -26,6 +30,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~3.0.0",
