--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "server": "json-server src/services/server.json -w -d 500 -H 192.168.1.102 -p 3333"
+    "server": "json-server src/services/server.json -w -d 500 -H 192.168.1.103 -p 3333"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.1.0",
@@ -23,6 +23,7 @@
     "expo": "~41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
+    "expo-notifications": "~0.11.5",
     "expo-status-bar": "~1.0.4",
     "json-server": "^0.16.3",
     "lottie-react-native": "3.5.0",
